added favorite musics page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
         "Spotify"
-    ]
+    ],
+    "editor.quickSuggestions": null,
+    "window.titleBarStyle": "default"
 }
