--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "_redirects"
+              "src/_redirects"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
